Update Pom files

--- a/register-client-spirng/pom.xml
+++ b/register-client-spirng/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>register-client-spirng</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>register-client-spirng</name>
-	<description>register Project</description>
+	<description>Registers Project Demo</description>
 	<url/>
 	<licenses>
 		<license/>
